# fetch_gazebo

./: CHANGELOG.rst  CMakeLists.txt  README.md  gpuinfo.txt  package.xml
.github/: CODEOWNERS
fetch_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
fetch_gazebo/config/: default_controllers.yaml
fetch_gazebo/include/fetch_gazebo/: joint_handle.h
fetch_gazebo/launch/: pickplace_playground.launch  picktobin_playground.launch  playground.launch  simple_grasp.launch  simulation.launch
fetch_gazebo/launch/include/: fetch.launch.xml  fetch_pp.launch.xml  freight.launch.xml  head_camera.launch.xml
fetch_gazebo/robots/: fetch.gazebo.srdf  fetch.gazebo.srdf.xacro  fetch.gazebo.xacro  freight.gazebo.xacro
fetch_gazebo/scripts/: prepare_simulated_robot.py  prepare_simulated_robot_pick_place.py
fetch_gazebo/src/: plugin.cpp
fetch_gazebo/worlds/: simple_pick_place.sdf  test_zone_pick_place.sdf  test_zone_pick_to_bin.sdf
fetch_gazebo_demo/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
fetch_gazebo_demo/config/: detection.fetch.ork  pick_place_demo.rviz  recognize.rviz  simple_grasping.yaml
fetch_gazebo_demo/launch/: demo.launch  fetch_nav.launch  freight_nav.launch  pick_place_demo.launch  recognize_demo.launch  tests_arm_movements.launch
fetch_gazebo_demo/maps/: test_zone.yaml
fetch_gazebo_demo/scripts/: demo.py  pick_place_demo.py  tests_arm_movements.py
fetch_gazebo_demo/src/fetch_gazebo_demo/: democlients.py
fetch_simulation/: CHANGELOG.rst  CMakeList.txt  CMakeLists.txt  package.xml
fetchit_challenge/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
fetchit_challenge/action/: SchunkMachine.action  SickCamera.action
fetchit_challenge/config/: shunk_machine_control.yaml
fetchit_challenge/launch/: assembly_largegear_spawn.launch  assembly_smallgear_spawn.launch  assembly_spawn.launch  assembly_spawn_simple.launch  assembly_spawn_simple_arena_montreal2019.launch  fetch_robot_spawn.launch  fetchit_atrezzo.launch  fetchit_challenge_arena_montreal2019.launch  fetchit_challenge_arena_montreal2019_highlights.launch  fetchit_challenge_assembly.launch  fetchit_challenge_empty.launch  fetchit_challenge_simple.launch  fetchit_challenge_simple_highlights.launch  fetchit_challenge_test.launch  fetchit_challenge_test_lowlights.launch  main.launch  main_arena_montreal2019.launch  main_arena_montreal2019_highlights.launch  main_lowlights.launch  main_simple.launch  main_simple_highlights.launch  shunk_machine_control.launch  shunk_machine_spawn.launch  shunk_machine_start.launch  shunk_machine_start_server_sim.launch  test_schunk_machine.launch
fetchit_challenge/models/50mmbin_green/: model.config  model.sdf
fetchit_challenge/models/50mmbin_green/meshes/: 50mm_green.dae
fetchit_challenge/models/50mmbin_red/: model.sdf
fetchit_challenge/models/50mmbin_red/meshes/: 50mm_red.dae
fetchit_challenge/models/50mmbin_yellow/: model.config  model.sdf
fetchit_challenge/models/50mmbin_yellow/meshes/: 50mm_yellow.dae
fetchit_challenge/models/caddy_blue/: model.sdf
fetchit_challenge/models/caddy_green/: model.sdf
fetchit_challenge/models/caddy_grey/: model.sdf
fetchit_challenge/models/caddy_orange/: model.sdf
fetchit_challenge/models/caddy_pink/: model.sdf
fetchit_challenge/models/caddy_purple/: model.sdf
fetchit_challenge/models/caddy_red/: model.sdf
fetchit_challenge/models/caddy_yellow/: model.sdf
fetchit_challenge/models/demo_cube/: model.sdf
fetchit_challenge/models/demo_cube_green/: model.sdf
fetchit_challenge/models/fetchit_simple_env/: model.sdf
fetchit_challenge/models/fetchit_simple_env/meshes/: fetchit_env_barebones_v2.dae
fetchit_challenge/models/fetchit_table/: model.sdf
fetchit_challenge/models/fetchit_table/meshes/: fetchit_table.dae  fetchit_table_shadeless.dae  fetchit_table_shadeless_nolight.dae  fetchit_table_shadeless_nolight_clip.dae  fetchit_table_shadeless_nolight_clip_uvtextureexport.dae
fetchit_challenge/models/fetchit_warehouse/: model.sdf
fetchit_challenge/models/gearbox_bolt/: model.sdf
fetchit_challenge/models/gearbox_bolt/meshes/: screw_v1.dae
fetchit_challenge/models/gearbox_bolt_blue/: model.sdf
fetchit_challenge/models/gearbox_bolt_grey/: model.sdf
fetchit_challenge/models/gearbox_bottom/: model.sdf
fetchit_challenge/models/gearbox_bottom_blue/: model.sdf
fetchit_challenge/models/gearbox_bottom_grey/: model.sdf
fetchit_challenge/models/gearbox_largegear/: model.sdf
fetchit_challenge/models/gearbox_largegear/meshes/: largeGear_v1.dae  largeGear_v1_simple_v2.stl  largeGear_v2.dae  largeGear_v4.dae  largeGear_v4.stl  largeGear_v5.dae  largeGear_v5.stl
fetchit_challenge/models/gearbox_largegear_blue/: model.sdf
fetchit_challenge/models/gearbox_largegear_grey/: model.sdf
fetchit_challenge/models/gearbox_smallgear/: model.sdf
fetchit_challenge/models/gearbox_smallgear_blue/: model.sdf
fetchit_challenge/models/gearbox_smallgear_grey/: model.sdf
fetchit_challenge/models/gearbox_top/: model.sdf
fetchit_challenge/models/gearbox_top/meshes/: gearBoxTop_v1.dae  gearBoxTop_v1.stl  gearBoxTop_v3.stl
fetchit_challenge/models/gearbox_top_blue/: model.sdf
fetchit_challenge/models/gearbox_top_grey/: model.sdf
fetchit_challenge/models/romanoff_small_utility_caddy/: model.config  model.sdf
fetchit_challenge/models/romanoff_small_utility_caddy/meshes/: Romanoff_Small_Utility_Caddy_cof.dae
fetchit_challenge/nodes/: schunk_machine_server.py  shunk_machine_controlers.py  shunk_machine_controlers_sim.py  sick_camera_client.py  sick_camera_server.py
fetchit_challenge/rviz/: shunk_machine.rviz
fetchit_challenge/scripts/: spawn_assembly_delayed.sh  spawn_assembly_delayed_simple.sh  spawn_assembly_delayed_simple_arena_montreal2019.sh
fetchit_challenge/urdf/: shunk_machine.urdf
fetchit_challenge/worlds/: fetchit_challenge_arena_montreal2019.world  fetchit_challenge_arena_montreal2019_highlights.world  fetchit_challenge_simple.world  fetchit_challenge_simple_highlights.world  fetchit_challenge_tests.world  fetchit_challenge_tests_lowlights.world
launch/: demo.launch  (+3 more)
(+9 files in other folders)
