<package>
  <name>fetch_gazebo</name>
  <version>0.6.2</version>
  <description>
    Gazebo package for Fetch.
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="mferguson@fetchrobotics.com">Michael Ferguson</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/fetch_gazebo</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>robot_controllers</build_depend>
  <build_depend>robot_controllers_interface</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>depth_image_proc</run_depend>
  <run_depend>fetch_description</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_proc</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>robot_controllers</run_depend>
  <run_depend>robot_controllers_interface</run_depend>
  <run_depend>rgbd_launch</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>xacro</run_depend>
</package>
