<package>
  <name>fetch_gazebo_demo</name>
  <version>0.9.1</version>
  <description>
    Demos for fetch_gazebo package.
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="amoriarty@fetchrobotics.com">Alex Moriarty</maintainer>
  <maintainer email="narora@fetchrobotics.com">Niharika Arora</maintainer>
  <maintainer email="selliott@fetchrobotics.com">Sarah Elliott</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/fetch_gazebo_demo</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>fetch_gazebo</run_depend>
  <run_depend>fetch_moveit_config</run_depend>
  <run_depend>fetch_navigation</run_depend>
  <run_depend>moveit_commander</run_depend>
  <run_depend>moveit_python</run_depend>
  <run_depend>simple_grasping</run_depend>
  <run_depend>teleop_twist_keyboard</run_depend>
</package>
